--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <cast-media-player></cast-media-player>
     <footer>
       <script src="js/receiver.js"></script>
     </footer>
