--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Cast CAF Receiver</title>
     <!-- TODO: Add Cast! -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" media="screen" />
     <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
 
   </head>
