--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="css/receiver.css" media="screen" />
   <script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js">
   </script>
 </head>
 <body>
   <cast-media-player></cast-media-player>
+  <style>
+    body {
+      --playback-logo-image: url('http://some/image.png');
+    }
+    cast-media-player {
+      --theme-hue: 100;
+      --progress-color: rgb(0, 255, 0);
+      --splash-image: url('http://some/image.png');
+    }
+  </style>
+  <script>
+    const context = cast.framework.CastReceiverContext.getInstance();
+
+    ...
+
+    // Update style using javascript
+    let playerElement = document.getElementsByTagName("cast-media-player")[0];
+    playerElement.style.setProperty('--splash-image', 'url("http://some/other/image.png")');
+
+    ...
+
+    context.start();
+  </script>
 </body>
-<footer>
-  <script src="js/receiver.js"></script>
-</footer>
 </html>
