--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       --theme-hue: 100;
       --progress-color: rgb(0, 255, 0);
       --splash-image: url('https://github.com/sergiogc92/chromecast-receiver/blob/8082fa00b24fd0c83eac2756a3d5a0ce5d90b2a9/logo.png');
+      --background-image: linear-gradient(white, silver);
     }
   </style>
   <script>
