--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <cast-media-player></cast-media-player>
   <style>
     body {
-      --playback-logo-image: url('https://github.com/sergiogc92/chromecast-receiver/blob/8082fa00b24fd0c83eac2756a3d5a0ce5d90b2a9/logo.png');
+      --playback-logo-image: url('logo.png');
     }
     cast-media-player {
       --theme-hue: 100;
       --progress-color: rgb(0, 255, 0);
-      --splash-image: url('https://github.com/sergiogc92/chromecast-receiver/blob/8082fa00b24fd0c83eac2756a3d5a0ce5d90b2a9/logo.png');
+      --splash-image: url('logo.png');
       --background-image: linear-gradient(white, silver);
-      --background-image: url('https://github.com/sergiogc92/chromecast-receiver/blob/8082fa00b24fd0c83eac2756a3d5a0ce5d90b2a9/logo.png');
-      --logo-image: url('https://github.com/sergiogc92/chromecast-receiver/blob/8082fa00b24fd0c83eac2756a3d5a0ce5d90b2a9/logo.png');
+      --background-image: url('logo.png');
+      --logo-image: url('logo.png');
     }
   </style>
   <script>
@@ -26,7 +26,7 @@
 
     // Update style using javascript
     let playerElement = document.getElementsByTagName("cast-media-player")[0];
-    playerElement.style.setProperty('--splash-image', 'url("https://github.com/sergiogc92/chromecast-receiver/blob/8082fa00b24fd0c83eac2756a3d5a0ce5d90b2a9/logo.png")');
+    playerElement.style.setProperty('--splash-image', 'url("logo.png")');
 
     ...
 
